--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,18 +8,19 @@
     <link rel="stylesheet" href="style.css">
     <title>testing app </title>
 </head>
+
 <body>
     <div class="inputs">
         <h2>Add Text</h2>
-        <div class="data" >
+        <div class="data">
             <input type="text" id="inp">
-            <button id="btn" >Add</button>
+            <button id="btn">Add</button>
         </div>
     </div>
     <div class="list">
         <div class="box">
             <h2>Box</h2>
-            
+
         </div>
         <div class="box">
             <h2>Box</h2>
@@ -30,6 +32,8 @@
             <h2>Box</h2>
         </div>
     </div>
+    <h1>Hassan</h1>
     <script src="main.js"></script>
 </body>
+
 </html>
